// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-language should create a language 1`] = `
{
  "content": [
    {
      "text": "{
  "success": true,
  "isoCode": "en-GB"
}",
      "type": "text",
    },
  ],
}
`;

exports[`create-language should handle existing language 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 400",
      "type": "text",
    },
  ],
}
`;
